--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,13 @@
   font-size: large;
 }
 
+.form {
+  margin: 5vh 35vw;
+  padding: 20px;
+  /* width: 30vw; */
+  border: 1px solid black
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
