--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,8 +8,10 @@
 }
 
 .App-header {
+  display: flex;
+  justify-content: space-between;
   background-color: #222;
-  height: 50px;
+  height: 70px;
   padding: 20px;
   color: white;
 }
@@ -20,6 +22,14 @@
 
 .App-intro {
   font-size: large;
+}
+
+.nav-button {
+  background:none!important;
+     color:inherit;
+     border:none;
+     padding:0!important;
+     font: inherit;
 }
 
 .form {
