--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,19 @@
   font-size: large;
 }
 
+ul {
+  list-style: none;
+}
+
+.movie-list {
+  display: flex;
+  justify-content: space-around;
+}
+
+.movie-box {
+  width: 40vw
+}
+
 .nav-button {
   background:none!important;
      color:inherit;
