--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #222;
-  height: 70px;
+  height: 60px;
   padding: 20px;
   color: white;
 }
@@ -39,7 +39,7 @@ ul {
 }
 
 .movie-box {
-  width: 40vw
+  width: 40vw;
 }
 
 .nav-button {
