--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,6 +39,10 @@ ul {
 }
 
 .movie-box {
+  text-align: left;
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 8px 0px 8px 8px;
   width: 40vw;
 }
 
