--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,21 @@ ul {
   list-style: none;
 }
 
+.btn {
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  /* padding: 12px 24px; */
+  font-size: 16px;
+  cursor: pointer;
+  margin: 3px 10px;
+}
+
+.btn-wide {
+  width:70%
+}
+
 .title {
   display: block;
   width: 100vw
@@ -44,11 +59,15 @@ ul {
 }
 
 .movie-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: left;
   border: 1px solid black;
   border-radius: 3px;
   padding: 8px 0px 8px 8px;
-  width: 40vw;
+  width: 25vw;
+  min-height:210px
 }
 
 .nav-button {
