--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #222;
-  height: 60px;
+  height: 65px;
   padding: 20px;
   color: white;
 }
@@ -26,6 +26,10 @@
 
 ul {
   list-style: none;
+}
+
+.search {
+  margin-top:8px
 }
 
 .btn {
