--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   background-color: honeydew;
-  height: 120vh;
+  padding-bottom: 40px;
+  min-height:100vh;
 }
 
 .App-logo {
@@ -105,7 +106,8 @@
   margin: 5vh 35vw;
   padding: 20px;
   min-width: 80px;
-  border: 1px solid black
+  border: 1px solid black;
+  background-color:ghostwhite
 }
 
 .new-list {
